chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books
spec:
  selector:
    app: books
  ports:
    - port: 3000
      targetPort: 3000
