chart/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: books
spec:
  parentRefs:
    - name: public-gateway
      namespace: networking

  hostnames:
    - books.toando.de

  rules:
    - backendRefs:
        - name: books
          port: 3000
